<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProductActivity">


    <Button
        android:id="@+id/incrementButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/increment"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/spinnerProductUnits"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName" />

    <Button
        android:id="@+id/decrementButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/decrement"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName" />

    <EditText
        android:id="@+id/editTextProductQuantity"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/big_padding"
        android:layout_marginEnd="16dp"
        android:digits="0123456789"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_product_quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/incrementButton"
        app:layout_constraintStart_toEndOf="@+id/decrementButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName" />

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_product"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <Spinner
        android:id="@+id/spinnerProductUnits"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/labels_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductName" />

    <Button
        android:id="@+id/saveProductChangesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>